--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                 ],
                 faqAnswers: [
                     "Appetizers and main course, all kosher and basari. There will be vegan option as well.",
-                    "The wedding is mostly indoors, feel whatever you feel like.",
+                    "The wedding is mostly indoors, wear whatever you feel like.",
                     "YES"
                 ],
                 headerTitle: "Shachar & Bes",
