--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shachar & Bes</title>
-    <link href="https://fonts.googleapis.com/css2?family=The+Seasons&family=Kedem:wght@400;700&family=Dancing+Script:wght@400;600;700&family=Varela+Round&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&family=The+Seasons&family=Kedem:wght@400;700&family=Dancing+Script:wght@400;600;700&family=Varela+Round&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -30,7 +30,8 @@
 
         body[dir="rtl"], html[dir="rtl"] {
             direction: rtl;
-            font-family: 'Varela Round', 'Kedem', Helvetica, sans-serif !important;
+            /* Use Alef as the primary Hebrew font (falls back to Kedem/Varela) */
+            font-family: 'Alef', 'Kedem', 'Varela Round', Helvetica, sans-serif !important;
         }
 
         body[dir="rtl"] .section,
@@ -52,6 +53,27 @@
             position: relative;
         }
 
+        /* Make header image full-bleed and responsive. Use object-fit to crop nicely. */
+        .header-cover {
+            display: block;
+            /* fill available width but never grow beyond original/max pixel width */
+            width: 100%;
+            max-width: 1400px; /* cap growth to avoid over-stretch on very large screens */
+            height: auto; /* let height adjust to maintain aspect ratio */
+            object-fit: contain; /* preserve aspect ratio without cropping */
+            object-position: center center;
+            margin: 0 auto; /* center when viewport is larger than image max-width */
+        }
+
+        @media (max-width: 1024px) {
+            .header-cover { height: auto; }
+        }
+        @media (max-width: 768px) {
+            .header-cover { height: auto; }
+        }
+        @media (max-width: 420px) {
+            .header-cover { height: auto; }
+        }
         .header::before {
             content: none;
         }
@@ -157,6 +179,53 @@
             margin: 0 auto;
         }
 
+        /* Make countdown cards more compact on narrow screens so they sit side-by-side */
+        @media (max-width: 600px) {
+            .countdown-container {
+                /* Force up to 3 columns even on small screens, with small min width */
+                grid-template-columns: repeat(3, minmax(60px, 1fr));
+                gap: 10px;
+                max-width: 100%;
+                padding: 0 8px;
+                box-sizing: border-box;
+            }
+
+            .countdown-card {
+                padding: 8px 6px;
+                border-radius: 10px;
+                box-shadow: 0 6px 14px rgba(0,0,0,0.06);
+            }
+
+            .countdown-number {
+                font-size: 1rem;
+            }
+
+            .countdown-label {
+                font-size: 0.65rem;
+                letter-spacing: 0.8px;
+            }
+        }
+
+        /* Extra small phones: tighten spacing a bit more */
+        @media (max-width: 380px) {
+            .countdown-container {
+                grid-template-columns: repeat(3, minmax(48px, 1fr));
+                gap: 6px;
+            }
+
+            .countdown-card {
+                padding: 6px 4px;
+            }
+
+            .countdown-number {
+                font-size: 0.95rem;
+            }
+
+            .countdown-label {
+                font-size: 0.6rem;
+            }
+        }
+
         .countdown-card:hover {
             transform: translateY(-10px);
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
@@ -250,6 +319,16 @@
             position: relative;
         }
 
+        /* Use Alef for titles when in RTL (Hebrew) mode for a nicer look */
+        body[dir="rtl"] .main-title,
+        html[dir="rtl"] .main-title,
+        body[dir="rtl"] .section-title,
+        html[dir="rtl"] .section-title,
+        body[dir="rtl"] .detail-card h3,
+        html[dir="rtl"] .detail-card h3 {
+            font-family: 'Alef', 'Kedem', 'Varela Round', Helvetica, sans-serif !important;
+        }
+
         .section-title::after {
             content: '';
             position: absolute;
@@ -264,25 +343,26 @@
 
         .timer-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 30px;
-            max-width: 600px;
+            /* allow narrower cards so they sit closer together */
+            grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+            gap: 12px;
+            max-width: 520px;
             margin: 0 auto;
         }
 
         .timer-card {
             background: var(--white);
-            padding: 30px 20px;
-            border-radius: 20px;
+            padding: 16px 12px; /* tighter padding */
+            border-radius: 16px;
             text-align: center;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            border: 3px solid transparent;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+            transition: transform 0.2s ease;
+            border: 2px solid transparent;
             background-clip: padding-box;
         }
 
         .timer-card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-4px);
         }
 
         .timer-card:nth-child(1) { border-color: var(--pink); }
@@ -292,19 +372,32 @@
 
         .timer-number {
             font-family: 'Kedem', serif;
-            font-size: 2.5rem;
+            font-size: 1.8rem; /* slightly smaller so it fits tighter */
             font-weight: 700;
             color: var(--pink);
             display: block;
-            margin-bottom: 10px;
+            margin-bottom: 6px;
         }
 
         .timer-label {
-            font-size: 1rem;
+            font-size: 0.85rem;
             color: var(--gray);
             font-weight: 600;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 0.8px;
+        }
+
+        /* On very small screens make them even tighter */
+        @media (max-width: 420px) {
+            .timer-container {
+                grid-template-columns: repeat(4, minmax(56px, 1fr));
+                gap: 8px;
+                max-width: 100%;
+                padding: 0 6px;
+            }
+            .timer-card { padding: 10px 8px; border-radius: 12px; }
+            .timer-number { font-size: 1.2rem; }
+            .timer-label { font-size: 0.7rem; }
         }
 
         .journey-text {
@@ -616,7 +709,8 @@
 </head>
 <body>
     <header class="header">
-    <img src="./imgs/cover.jpg" alt="Cover" style="display:block;margin:0 auto;max-width:85%;height:auto;margin-bottom:-80px;" />
+        <!-- header-cover class will make this full-bleed and crop nicely -->
+        <img src="./imgs/cover.jpg" alt="Cover" class="header-cover" />
     </header>
 
     <section id="countdown" class="section">
